# app_rkadk

./: CMakeLists.txt  rkadk_defsetting.ini  rkadk_setting.ini
examples/: CMakeLists.txt  rkadk_aov_record_test.c  rkadk_disp_test.c  rkadk_media_test.c  rkadk_photo_test.c  rkadk_player_once_test.c  rkadk_player_test.c  rkadk_record_test.c  rkadk_rtmp_test.c  rkadk_rtsp_test.c  rkadk_setting_test.c  rkadk_storage_test.c  rkadk_stream_test.c  rkadk_thumb_test.c  rkadk_ui_test.c
examples/common/isp/: sample_aiq_uapi1.c  sample_aiq_uapi1.cpp  sample_aiq_uapi2.c  sample_aiq_uapi2.cpp  sample_common_isp.c  sample_isp.h
examples/common/isp/rv1103b/: sample_aiq_uapi2.c
include/: rkadk_aov.h  rkadk_audio_decoder.h  rkadk_audio_mp3.h  rkadk_common.h  rkadk_demuxer.h  rkadk_disp.h  rkadk_log.h  rkadk_media_comm.h  rkadk_muxer.h  rkadk_osd.h  rkadk_param.h  rkadk_param_map.h  rkadk_photo.h  rkadk_platform_param.h  rkadk_player.h  rkadk_record.h  rkadk_storage.h  rkadk_stream.h  rkadk_struct2ini.h  rkadk_thumb.h  rkadk_thumbnail_comm.h  rkadk_ui.h  rkadk_version.h  rkadk_vi_isp.h
inicfg/: rkadk_defsetting.ini  rkadk_defsetting_sensor_0.ini  rkadk_defsetting_sensor_1.ini  rkadk_setting.ini  rkadk_setting_sensor_0.ini  rkadk_setting_sensor_1.ini
inicfg/rv1106_1103/: rkadk_defsetting.ini  rkadk_defsetting_sensor_0.ini  rkadk_defsetting_sensor_1.ini  rkadk_setting.ini  rkadk_setting_sensor_0.ini  rkadk_setting_sensor_1.ini
inicfg/rv1126_1109/: rkadk_defsetting.ini  rkadk_defsetting_sensor_0.ini  rkadk_defsetting_sensor_1.ini  rkadk_setting.ini  rkadk_setting_sensor_0.ini  rkadk_setting_sensor_1.ini
src/: CMakeLists.txt  SConscript
src/aov/: rkadk_aov.c
src/audio/decoder/: rkadk_audio_decoder.cpp  rkadk_audio_decoder_mp3.cpp
src/audio/encoder/: rkadk_audio_encoder.cpp  rkadk_audio_encoder_mp3.cpp
src/common/: rkadk_audio_mp3.cpp  rkadk_media_comm.c  rkadk_media_comm.cpp  rkadk_media_comm.h  rkadk_thread.cpp  rkadk_thread.h  rkadk_thumb_comm.c  rkadk_thumb_comm.cpp  rkadk_thumb_comm.h  rkadk_thumbnail_comm.cpp  rkmuxer.h
src/demuxer/: rkadk_demuxer.c  rkadk_demuxer.cpp  rkdemuxer.h
src/display/: rkadk_disp.c  rkadk_disp.cpp
src/live/rtmp/: rkadk_rtmp.c  rkadk_rtmp.cpp
src/live/rtsp/: rkadk_rtsp.c  rkadk_rtsp.cpp
src/muxer/: rkadk_muxer.c  rkadk_muxer.cpp  rkadk_thread.h  rkmuxer.h
src/osd/: rkadk_osd.c  rkadk_osd.cpp
src/param/: rkadk_param.c  rkadk_param.cpp  rkadk_param_inner.h  rkadk_param_map.cpp  rkadk_struct2ini.c  rkadk_struct2ini.cpp
src/photo/: rkadk_photo.c  rkadk_photo.cpp
src/player/: rkadk_player.c  rkadk_player.cpp  rkadk_surface_interface.cpp  rkadk_surface_interface.h
src/record/: rkadk_record.c  rkadk_record.cpp  rkadk_recorder_pro.cpp  rkadk_recorder_pro.h  rkadk_thumb.cpp  rkadk_video_frame.cpp
src/storage/: rkadk_storage.c  rkadk_storage.cpp
src/stream/: rkadk_stream.c  rkadk_stream.cpp
src/ui/: rkadk_ui.c  rkadk_ui.cpp
src/vi/: rkadk_aiq_uapi1.cpp  rkadk_aiq_uapi2.cpp  rkadk_vi_isp.cpp
version/: Version.cmake
